добавить NotFoundException, исправить код при пересечении задач на 406